[tool.poetry]
name = "susu-jupyterlab"
version = "0.1.0"
description = ""
authors = ["Anastasiya Strueva <nastasy822@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.8.10"
pandas = "1.5.3"
jupyterlab = "^4.0.0"
sktime = "^0.19.0"
plotly = "^5.14.1"
matplotlib = "^3.7.1"
scikit-learn = "^1.2.2"
scipy = "^1.10.1"
seaborn = "^0.12.2"
ruamel-yaml = "^0.17.21"
python-box = "^7.0.1"
pyarrow = "^12.0.0"
fastparquet = "^2023.4.0"
numpy = "1.23.1"
imblearn = "^0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
